# SPARQL-query

./: README.md  pyproject.toml
sparql_query/: query.py
tests/: test_sparql_query.py
